# Kumpe3D_Kiosk

./: README.md  SECURITY.md  addroll.py  appveyor.yml  bottom_bar.py  build_log.txt  example.env  home.py  logo.py  logo.xbm  main.py  menu.py  params.py  pyproject.toml  requirements.txt  test.txt
.github/: auto-release.yml  dependabot.yml
.github/models/: user.py
.github/workflows/: create-release.yml
.well-known/: apple-app-site-association  assetlinks.json
api/: delete.py  get.py  login.py  oauth.py  post.py  put.py
assets/: assetlinks.json
core/: config.py  config2.py  params.py
fastlane/: Appfile  Fastfile  Matchfile  Precheckfile  report.xml
helpers/: is_port_open.py  logo.py
models/: kumpeapi_response.py  order.py  print_label.py  production_q.py  scan_translation.py  user.py
pluggins/: helpers.py  scan_list_builder.py  shippo_labels.py
sounds/: beep.py  beeps.py
views/: add_filament.py  addroll.py  addstock.py  emptyroll.py  home.py  login.py  openroll.py  order_status_update.py  orderitems.py  pendingorders.py  productionq.py  productlabel.py
