[project]
name = "kumpe3dkiosk"
description = "Kiosk App for Kumpe 3D"
authors = [
  {name = "Justin Kumpe", email = "jakumpe@kumpeapps.com"}
]

flutter.dependencies = ["flet_audio"]

dependencies = [
  "flet==0.26.0",
  "PyMySQL==1.1.1",
  "python-dotenv==1.0.1",
  "parse==1.20.1",
  "chardet==5.2.0",
  "flet-easy==0.2.9",
  "loguru==0.7.2",
  "flet-toast==0.5.0",
  "requests==2.32.0"
  ]

[tool.flet]
org = "com.kumpeapps.flet" # --org
product = "Kumpe3D Kiosk" # --product
company = "KumpeApps LLC" # --company
copyright = "Copyright (C) 2024 by KumpeApps LLC" # --copyright
permissions = ["camera", "microphone", "internet", "read_media_audio", "read_media_video", "read_external_storage", "write_external_storage", "foreground_service", "foreground_service_location", "wake_lock", "post_notifications", "access_fine_location", "access_coarse_location"] # --permissions

[tool.flet.ios]
team = "2T42Z3DM34"

[tool.flet.ios.deep_linking]
scheme = "https"
host = "kiosk.kumpe3d.com"

[tool.flet.android.deep_linking]
scheme = "https"
host = "kiosk.kumpe3d.com"

[tool.flet.android.signing]
# store and key passwords can be passed with `--android-signing-key-store-password`
# and `--android-signing-key-password` options or
# FLET_ANDROID_SIGNING_KEY_STORE_PASSWORD
# and FLET_ANDROID_SIGNING_KEY_PASSWORD environment variables.
key_store = "/tmp/kumpe3dkiosk" # --android-signing-key-store
key_alias = "upload" # --android-signing-key-alias

[tool.flet.android.permission]
"android.permission.CAMERA" = true
"android.permission.INTERNET" = true
"android.permission.READ_MEDIA_AUDIO" = true
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.FOREGROUND_SERVICE" = true
"android.permission.FOREGROUND_SERVICE_LOCATION" = true
"android.permission.WAKE_LOCK" = true
"android.permission.POST_NOTIFICATIONS" = true
"android.permission.ACCESS_FINE_LOCATION" = true
"android.permission.ACCESS_COARSE_LOCATION" = true
"android.permission.ACCEPT_HANDOVER" = true

[tool.flet.android.feature]
"android.hardware.camera" = true
"android.software.leanback" = false
"android.hardware.touchscreen" = false